kubernetes/kustomize/overlays/local/static/ingress-nginx/default.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1G
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  name: default
  namespace: static
spec:
  rules:
    - host: api.local.tenlastic.com
      http:
        paths:
          - path: /friends
            pathType: Prefix
            backend:
              service:
                name: social-api
                port:
                  number: 3000
          - path: /game-servers
            pathType: Prefix
            backend:
              service:
                name: aggregation-api
                port:
                  number: 3000
          - path: /group-invitations
            pathType: Prefix
            backend:
              service:
                name: social-api
                port:
                  number: 3000
          - path: /groups
            pathType: Prefix
            backend:
              service:
                name: social-api
                port:
                  number: 3000
          - path: /ignorations
            pathType: Prefix
            backend:
              service:
                name: social-api
                port:
                  number: 3000
          - path: /messages
            pathType: Prefix
            backend:
              service:
                name: social-api
                port:
                  number: 3000
          - path: /queue-members
            pathType: Prefix
            backend:
              service:
                name: aggregation-api
                port:
                  number: 3000
          - path: /storefronts
            pathType: Prefix
            backend:
              service:
                name: aggregation-api
                port:
                  number: 3000
          - path: /swagger.json
            pathType: Exact
            backend:
              service:
                name: documentation
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: docker-registry.local.tenlastic.com
      http:
        paths:
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
    - host: minio.local.tenlastic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: minio-console.local.tenlastic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
    - host: verdaccio.local.tenlastic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verdaccio-internal
                port:
                  number: 4873
    - host: wss.local.tenlastic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
    - host: www.local.tenlastic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-ui
                port:
                  number: 80
